<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E8EA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <ImageView
            android:layout_marginTop="75dp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_beat_nation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="#1C1C1C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="283dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:gravity="left"
            android:padding="2dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/joinUsLabel"
            android:textColor="#1C1C1C"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_secondary_style"
            android:enabled="false"
            android:padding="12dp"
            android:text="@string/moreLoginOptionLabel"
            android:textColor="@color/ic_launcher_background"
            android:textStyle="bold" />

        <!-- Botón Login -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_primary_style"
            android:onClick="goToLogin"
            android:padding="12dp"
            android:text="@string/btnLoginLabel"
            android:textColor="@android:color/white" />

        <!-- Registro -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/noUserLabel"
            android:textColor="#1C1C1C"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_primary_style"
            android:onClick="goToRegister"
            android:padding="12dp"
            android:text="@string/btnRegisterLabel"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
